--- a/Titlepage.tex
+++ b/Titlepage.tex
@@ -10,7 +10,7 @@
     \Huge
 \begin{flushleft}
     \setstretch{0.9}
-    \textbf{Vom Luftbildarchiv zur historischen 3D- Landschaft – Basis für die Beurteilung von Gelände- und Landschaftsveränderungen}
+    \textbf{Titel}
 
     
     \vspace{0.5cm}
@@ -22,13 +22,13 @@
     
 \begin{figure}[H]
     \captionsetup{justification=raggedright, singlelinecheck=false}  % Setzt die Beschriftung auf linksbündig
-    \caption*{Ausschnitt der generierten Punktwolke aus den historischen Luftbildern von Muttenz (1953).}
+    \caption*{Bilderunterschrift}
 \end{figure}
     
     \vfill
     
     \Large
-    \textbf{Sven Uythoven}
+    \textbf{Max Mustermann}
     
     \vspace{0.8cm}
     
