--- a/Redlichkeitserklaerung.tex
+++ b/Redlichkeitserklaerung.tex
@@ -3,7 +3,7 @@
 
 \vspace{0.5em}
 
-\textbf{Sven Uythoven}\\
+\textbf{Max Mustermann}\\
 AdresseXXX\\
 xxx@students.fhnw.ch
 \\
@@ -12,26 +12,22 @@ xxx@students.fhnw.ch
 
 \vspace{0.5em}
 
-\textbf{Prof. Dr. Stephan Nebiker}\\ 
-Professor für Photogrammetrie, Fernerkundung und Geoinformatik
+\textbf{Prof. Dr. XX}\\ 
+XX
 
 \vspace{0.5em}
-
-\textbf{Natalie Lack}\\ 
-Wissenschaftliche Mitarbeiterin und Dozentin, Fachbereich: Photogrammetrie, Fernerkundung und Geoinformatik\\
-
 
 \textbf{Experte und Betreuer:}
 
 \vspace{0.5em}
 
-\textbf{Fabian Huber}\\
-Teilhaber und Mitglied der Geschäftsleitung KOPA.-Gruppe / pat. Ing.-Geometer 
+\textbf{XX}\\
+XX 
 
 \vspace{0.5em}
 
-\textbf{Elia Ferrari}\\
-Wissenschaftlicher Mitarbeiter, Fachbereich: Fernerkundung und Geoinformatik\\
+\textbf{XX}\\
+XX 
 
 
 
@@ -41,6 +37,6 @@ Wissenschaftlicher Mitarbeiter, Fachbereich: Fernerkundung und Geoinformatik\\
 Ich versichere, dass ich die vorliegende Arbeit selbstständig und ohne Verwendung anderer als der im Quellenverzeichnis (Literaturverzeichnis) angegebenen Quellen und Hilfsmittel angefertigt habe. Die wörtlich oder inhaltlich den im Literaturverzeichnis aufgeführten Quellen und Hilfsmittel entnommenen Stellen sind in der Arbeit als Zitate kenntlich gemacht und mit einem Verweis auf das Literaturverzeichnis versehen. Ich stimme zu, dass meine Arbeit elektronisch auf Plagiate überprüft werden kann. Diese Bachelor-Thesis ist nicht veröffentlicht, keinen anderen Interessenten zugänglich gemacht und keiner anderen Prüfungsbehörde vorgelegt worden.\\[2cm]
 Ort, Datum: Muttenz, 20. Juni 2025
 \hspace{2cm}
-Sven Uythoven: ...........................................
+Max Mustermann: ...........................................
 
 \newpage
